--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.4",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.12",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.9",
+        "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.0.23"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.4",
+        "bootstrap": "^5.1.3"
     }
 }
