--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.4",
+        "@tailwindcss/forms": "^0.4.0",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.25",
-        "browser-sync": "^2.27.9",
-        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.12",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.49.9",
-        "sass-loader": "^12.6.0",
-        "tailwindcss": "^3.0.23"
+        "postcss": "^8.4.6",
+        "postcss-import": "^14.0.2",
+        "tailwindcss": "^3.0.18"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.4",
